# 2048-leaderboard

./: .gitignore  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  README.md  STATISTICS.md  apprentice_benchmark.json  benchmark.py  benchmark_results.json  index.html  main.py  pyproject.toml  test_game.py  vercel.json
.github/workflows/: benchmark.yml  typecheck.yml
.opencode/: README.md
.opencode/commands/: implement-issue.md
.vercel/: project.json
game2048/: __init__.py  game.py  runner.py  stats.py
game2048/agents/: __init__.py  apprentice_agent.py  apprentice_model.pkl  corner_agent.py  expectimax_agent.py  greedy_agent.py  heuristic_agent.py  llm_agent.py  mcts_agent.py  random_agent.py  rightdown_agent.py  rightleft_agent.py  snake_agent.py  td_learning_agent.py
scripts/: apprentice_model.pkl  benchmark_llm.py  compare_encodings.py  evaluate_llm_models.py  experiment_architectures.py  implement_issue.py  run_llm_evaluation_examples.sh  test_evaluate_logic.py  train_apprentice.py
site/: README.md  index.html
