[project]
name = "game2048"
version = "0.1.0"
description = "2048 game with random agent and leaderboard support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["scipy>=1.11.0", "openai>=1.0.0"]

[project.scripts]
play2048 = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["game2048*"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = ["pytest>=8.0.0", "mypy>=1.8.0"]
